# telescope

./: .gitignore  Dockerfile  Justfile  README.md  TODO.md  fly.toml
.zed/: settings.json
backend/: Cargo.toml  Dockerfile  TODO.md  fly.toml  instructions.md
backend/scripts/: download_log.txt  package.json
backend/scripts/src/: bucket_upload.ts  build_index.ts  build_metadata.ts  download.ts  init.ts
backend/search_index/: all_metadata.json
backend/src/: config.rs  main.rs  websocket.rs
frontend/: README.md  biome.jsonc  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Chat.tsx  Search.tsx  index.css  server.ts  types.ts  util.ts
frontend/src/pages/: ChatPage.tsx
frontend/src/server/: chat.ts  index.ts  prompt.ts  search.ts  server.ts  stream.ts  text.ts  websocket.ts
frontend/src/server/chat/: chat.ts  index.ts  prompt.ts  signals.ts  tool.ts  tool.tsx  util.ts
