[package]
name = "spaceapp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = "0.29.3"
axum = "0.8.6"
futures = "0.3.31"
futures-core = "0.3.31"
pdf-extract = "0.10.0"
reqwest = "0.12.23"
reqwest-eventsource = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio"] }
tokio = { version="1.47.1", features = ["full"]}
tokio-tungstenite = "0.28.0"
tower-http = {version = "0.6.6", features = ["cors"]}
